--- a/VC_interface/VC_interface/templates/VC_interface/signing_page.html
+++ b/VC_interface/VC_interface/templates/VC_interface/signing_page.html
@@ -26,6 +26,7 @@
         <select id="signature-select" name="signature-select" required>
             <option value="jwt">JSON JWT</option>
             <option value="bss">JSON-LD ZKP + BSS+</option>
+            <option value="ld">JSON-LD with LD signature</option>
         </select>
         </div>
         <button id="sign-vc-btn">Sign VC</button>
