--- a/VC_interface/accounts/templates/accounts/login.html
+++ b/VC_interface/accounts/templates/accounts/login.html
@@ -28,7 +28,7 @@
     <input type="password" class="form-control" id="password" name="password" required>
   </div>
   <button type="submit" class="btn btn-primary">Login</button>
-           <p> <a href="../register">Créer un compte</a></p>
+           <p>Créer un compte</p>
             <div class="texte">
                 <div class="container">
                 <a href="../register-issuer">Issuer</a>
