--- a/VC_interface/accounts/static/accounts/css/login.css
+++ b/VC_interface/accounts/static/accounts/css/login.css
@@ -118,6 +118,8 @@ form a {
 
 form p {
     margin-top: 10px;
+    text-align: center;
+
 }
 
 
@@ -153,6 +155,7 @@ button {
     height: 30px;
     text-align: center;
 }
+
 
 button:hover {
     background-color: #19416e;
