add javadoc, python doc and README.md

--- a/VC_interface/VC_interface/templates/VC_interface/signing_page.html
+++ b/VC_interface/VC_interface/templates/VC_interface/signing_page.html
@@ -27,6 +27,7 @@
             <option value="jwt">JSON JWT</option>
             <option value="bss">JSON-LD ZKP + BSS+</option>
             <option value="ld">JSON-LD with LD signature</option>
+            <option value="zkp-cl">ZKP CL</option>
         </select>
         </div>
         <button id="sign-vc-btn">Sign VC</button>
