--- a/VC_interface/VC_interface/templates/VC_interface/signing_page.html
+++ b/VC_interface/VC_interface/templates/VC_interface/signing_page.html
@@ -25,7 +25,7 @@
         <label for="signature-select">Please select a method for sign the vc :</label>
         <select id="signature-select" name="signature-select" required>
             <option value="jwt">JSON JWT</option>
-            <option value="bss">JSON-LD ZKP + BSS+</option>
+            <option value="bbs">JSON-LD ZKP + BBS+</option>
             <option value="ld">JSON-LD with LD signature</option>
             <option value="zkp-cl">ZKP CL</option>
         </select>
